--- a/public/survey.html
+++ b/public/survey.html
@@ -172,7 +172,7 @@
 const sessionData = JSON.parse(sessionStorage.getItem("participantData"));
 if (!sessionData) window.location.href = "index.html";
 
-const APPS_SCRIPT_URL = "YOUR_DEPLOYED_WEB_APP_URL_HERE";
+const APPS_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbyLNqzJMIYvSKrOMN3r5C6MWqRX-0NyrAiB-QgU2w1DxYBPkbg0VXS7othElYOwd22K/exec";
 
 let audioFiles = [
   "audio/DF_E_2000013.flac","audio/DF_E_2000024.flac","audio/DF_E_2000026.flac",
