--- a/public/survey.html
+++ b/public/survey.html
@@ -254,11 +254,14 @@ async function submitAndNext(){
 
   responses[currentIndex]=responseData;
 
-  fetch(APPS_SCRIPT_URL,{
-    method:"POST",
-    mode:"no-cors",
-    body:JSON.stringify({...sessionData,...responseData})
-  });
+ await fetch(APPS_SCRIPT_URL, {
+  method: "POST",
+  headers: {
+    "Content-Type": "application/json"
+  },
+  body: JSON.stringify({...sessionData, ...responseData})
+});
+
 
   currentIndex++;
 
