Change fetch request to use no-cors mode

--- a/public/survey.html
+++ b/public/survey.html
@@ -281,10 +281,11 @@ async function submitAndNext(){
 
   try{
     await fetch(APPS_SCRIPT_URL,{
-      method:"POST",
-      headers:{"Content-Type":"application/json"},
-      body:JSON.stringify({...sessionData,...responseData})
-    });
+  method:"POST",
+  mode:"no-cors",
+  body:JSON.stringify({...sessionData,...responseData})
+});
+
   } catch(err){
     console.error("Submission failed:",err);
   }
